capture controller compiling

--- a/psrdada_cpp/meerkat/apsuse/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/apsuse/CMakeLists.txt
@@ -6,10 +6,9 @@
 
 
    set(psrdada_cpp_meerkat_apsuse_src
-      src/BeamCaptureController.cpp
       )
 
-   add_library(${CMAKE_PROJECT_NAME}_meerkat_apsuse ${psrdada_cpp_meerkat_apsuse_src})
+  # add_library(${CMAKE_PROJECT_NAME}_meerkat_apsuse ${psrdada_cpp_meerkat_apsuse_src})
 
    #add_executable(apsuse src/apsuse_cli.cu)
    #target_link_libraries(apsuse ${PSRDADA_CPP_MEERKAT_APSUSE_LIBRARIES})
