added rules for building apsuse application

--- a/psrdada_cpp/meerkat/apsuse/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/apsuse/CMakeLists.txt
@@ -8,11 +8,11 @@
    set(psrdada_cpp_meerkat_apsuse_src
       )
 
-  # add_library(${CMAKE_PROJECT_NAME}_meerkat_apsuse ${psrdada_cpp_meerkat_apsuse_src})
+   #add_library(${CMAKE_PROJECT_NAME}_meerkat_apsuse ${psrdada_cpp_meerkat_apsuse_src})
 
-   #add_executable(apsuse src/apsuse_cli.cu)
-   #target_link_libraries(apsuse ${PSRDADA_CPP_MEERKAT_APSUSE_LIBRARIES})
-   #install(TARGETS apsuse DESTINATION bin)
+   add_executable(apsuse src/apsuse_cli.cpp)
+   target_link_libraries(apsuse ${PSRDADA_CPP_LIBRARIES})
+   install(TARGETS apsuse DESTINATION bin)
 
    add_subdirectory(test)
 
