Added Buffer Dump CLI app for testing

--- a/psrdada_cpp/meerkat/fbfuse/CMakeLists.txt
+++ b/psrdada_cpp/meerkat/fbfuse/CMakeLists.txt
@@ -31,6 +31,10 @@ cuda_add_executable(beam_bandpass_shm src/beam_bandpass_shm_cli.cpp)
 target_link_libraries(beam_bandpass_shm ${PSRDADA_CPP_MEERKAT_FBFUSE_LIBRARIES})
 install(TARGETS beam_bandpass_shm DESTINATION bin)
 
+cuda_add_executable(bufferdump_to_null src/bufferdump_to_null_cli.cpp)
+target_link_libraries(bufferdump_to_null ${PSRDADA_CPP_MEERKAT_FBFUSE_LIBRARIES})
+install(TARGETS bufferdump_to_null DESTINATION bin)
+
 add_subdirectory(test)
 
 endif(ENABLE_CUDA)
