implemented review comments and tested with gtest

--- a/psrdada_cpp/effelsberg/edd/test/CMakeLists.txt
+++ b/psrdada_cpp/effelsberg/edd/test/CMakeLists.txt
@@ -13,6 +13,8 @@ set(
     src/ScaledTransposeTFtoTFTTester.cu
     src/VLBITest.cu
     src/EDDPolnMergeTester.cpp
+    src/SKTestVector.cpp
+    src/SpectralKurtosisTester.cpp
 )
 cuda_add_executable(gtest_edd ${gtest_edd_src} )
 target_link_libraries(gtest_edd ${PSRDADA_CPP_EFFELSBERG_EDD_LIBRARIES} ${CUDA_CUFFT_LIBRARIES} -lcublas)
