added SKRfiReplacement class

--- a/psrdada_cpp/effelsberg/edd/CMakeLists.txt
+++ b/psrdada_cpp/effelsberg/edd/CMakeLists.txt
@@ -17,6 +17,7 @@ set(psrdada_cpp_effelsberg_edd_src
     src/EDDRoach_merge.cpp
     src/ScaledTransposeTFtoTFT.cu
     src/SpectralKurtosis.cpp
+    src/SKRfiReplacement.cpp
     src/Tools.cu
     src/Unpacker.cu
     src/VLBI.cu
