--- a/psrdada_cpp/effelsberg/edd/CMakeLists.txt
+++ b/psrdada_cpp/effelsberg/edd/CMakeLists.txt
@@ -16,9 +16,9 @@ set(psrdada_cpp_effelsberg_edd_src
     src/EDDRoach.cpp
     src/EDDRoach_merge.cpp
     src/ScaledTransposeTFtoTFT.cu
-    src/SpectralKurtosis.cpp
-    src/SpectralKurtosis.cu
     src/SKRfiReplacement.cpp
+    src/SpectralKurtosis.cpp
+    src/SpectralKurtosisCuda.cu
     src/Tools.cu
     src/Unpacker.cu
     src/VLBI.cu
