--- a/psrdada_cpp/effelsberg/edd/CMakeLists.txt
+++ b/psrdada_cpp/effelsberg/edd/CMakeLists.txt
@@ -17,6 +17,7 @@ set(psrdada_cpp_effelsberg_edd_src
     src/EDDRoach_merge.cpp
     src/ScaledTransposeTFtoTFT.cu
     src/SKRfiReplacement.cpp
+    src/SKRfiReplacementCuda.cu
     src/SpectralKurtosis.cpp
     src/SpectralKurtosisCuda.cu
     src/Tools.cu
